# Fantase

./: .gitignore  build.bat  readme.md
Bot/: CMakeLists.txt  main.cpp
Bot/release/: CppPythonAgent.py  Fantase.cfg  FantaseAppearance.cfg  FantaseGenerator.py
Bot/src/: agent.cc  agent.h
Bot/src/maneuvers/: GetBoost.cpp  GetBoost.h  Maneuver.cpp  Maneuver.h  MoveTo.cpp  MoveTo.h  Recovery.cpp  Recovery.h
Bot/src/maneuvers/Kickoff/: FrontFlipKickoff.cpp  FrontFlipKickoff.h  SpeedFlipKickoff.cpp  SpeedFlipKickoff.h
Bot/src/maneuvers/Shots/: AerialShot.cpp  AerialShot.h  DodgeShot.cpp  DodgeShot.h  GroundShot.cpp  GroundShot.h  Shot.cpp  Shot.h
Bot/src/strategy/: Strategy.cpp  Strategy.h  Targeting.cpp  Targeting.h
Bot/src/utils/: Prediction.cpp  Prediction.h  game_info.h  misc.cpp  misc.h  vector_math.h
Doxygen/html/: _aerial_shot_8h_source.html  _dodge_shot_8h_source.html  _front_flip_kickoff_8h_source.html  _get_boost_8h_source.html  _ground_shot_8h_source.html  _maneuver_8h_source.html  _move_to_8h_source.html  _prediction_8h_source.html  _recovery_8h_source.html  _shot_8h_source.html  _speed_flip_kickoff_8h_source.html  _strategy_8h_source.html  _targeting_8h_source.html  agent_8h_source.html  annotated.html  class_aerial_shot-members.html  class_aerial_shot.html  class_albux-members.html  class_albux.html  class_dodge_shot-members.html  class_dodge_shot.html  class_fantase-members.html  class_fantase.html  class_front_flip_kickoff-members.html  class_front_flip_kickoff.html  class_game_info-members.html  class_game_info.html  class_get_boost-members.html  class_get_boost.html  class_ground_shot-members.html  class_ground_shot.html  class_maneuver-members.html  class_maneuver.html  class_move_to-members.html  class_move_to.html  class_prediction-members.html  class_prediction.html  class_recovery-members.html  class_recovery.html  class_shot-members.html  (+28 more)
Doxygen/latex/: annotated.tex  class_aerial_shot.eps  class_aerial_shot.tex  class_albux.eps  class_albux.tex  class_dodge_shot.eps  class_dodge_shot.tex  class_fantase.eps  class_fantase.tex  class_front_flip_kickoff.eps  class_front_flip_kickoff.tex  class_game_info.tex  class_get_boost.eps  class_get_boost.tex  class_ground_shot.eps  class_ground_shot.tex  class_maneuver.eps  class_maneuver.tex  class_move_to.eps  class_move_to.tex  class_prediction.tex  class_recovery.eps  class_recovery.tex  class_shot.eps  class_shot.tex  class_speed_flip_kickoff.eps  (+6 more)
RLUtilities/: CMakeLists.txt  README.md  build.sh
(+88 files in other folders)
